--- a/.env_example
+++ b/.env_example
@@ -1,9 +1,9 @@
 DJANGO_DEBUG=1
 
-DJANGO_DATABASE=sqlite
+DJANGO_DATABASE=pg
 
 DB_NAME=deployment
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_HOST=127.0.0.1
+DB_HOST=postgresql
 DB_PORT=5432
