--- a/deploy/nginx/conf.d/deployment.conf
+++ b/deploy/nginx/conf.d/deployment.conf
@@ -9,6 +9,7 @@ server {
   }
 
   location / {
-    proxy_pass                   http://172.17.0.1:8888;
+    proxy_http_version           1.1;
+    proxy_pass                   http:deployment:8888;
   }
 }
