--- a/deploy/nginx/conf.d/deployment.conf
+++ b/deploy/nginx/conf.d/deployment.conf
@@ -10,6 +10,6 @@ server {
 
   location / {
     proxy_http_version           1.1;
-    proxy_pass                   http:deployment:8888;
+    proxy_pass                   http://deployment:8888;
   }
 }
